<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin_4dp"
    android:accessibilityPaneTitle="@string/customCard"
    android:background="@color/white"
    tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin_10dp"
        android:layout_marginTop="@dimen/big_margin_12dp"
        android:layout_marginEnd="@dimen/medium_margin_10dp"
        android:accessibilityTraversalBefore="@id/clContentProgress"
        android:importantForAccessibility="yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivDots"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Credid Card"
            tools:textColor="@color/blue" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/dots"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:importantForAccessibility="no"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeCard"
            tools:text="CRÉDITO"
            tools:textColor="@color/blue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContentCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/clContentProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clHeader">

        <include
            android:id="@+id/lCard"
            layout="@layout/card_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContentProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin_10dp"
        android:layout_marginEnd="@dimen/medium_margin_10dp"
        android:accessibilityTraversalBefore="@id/clContenBottom"
        android:importantForAccessibility="yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clContentCard">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreditLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:importantForAccessibility="no"
            android:text="@string/limit_credit"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Lmite de crédito" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreditMont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:importantForAccessibility="no"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCreditLimit"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2.0000.000.000.0000" />

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:importantForAccessibility="no"
            android:progressDrawable="@drawable/progressbar"
            android:progressTint="@color/yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreditLimit" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/circleShapeDebt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/circle_shape"
            app:layout_constraintBottom_toBottomOf="@+id/tvCreditDebt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreditDebt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_4dp"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:importantForAccessibility="no"
            android:text="@string/credit_debt"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/circleShapeDebt"
            app:layout_constraintTop_toBottomOf="@+id/progress"
            tools:text="Dispuesto" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreditDebtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin_4dp"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:importantForAccessibility="no"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/circleShapeDebt"
            app:layout_constraintTop_toBottomOf="@+id/tvCreditDebt"
            tools:text="1.0000"
            tools:textColor="@color/blue" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/circleShapeEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin_4dp"
            android:importantForAccessibility="no"
            android:src="@drawable/circle_shape"
            app:layout_constraintBottom_toBottomOf="@+id/tvCreditEnable"
            app:layout_constraintEnd_toStartOf="@+id/tvCreditEnable"
            app:layout_constraintTop_toTopOf="@+id/tvCreditEnable" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreditEnable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:importantForAccessibility="no"
            android:text="@string/credit_enable"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress"
            tools:text="Disponible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreditEnableAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_8dp"
            android:layout_marginEnd="@dimen/small_margin_4dp"
            android:importantForAccessibility="no"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreditEnable"
            tools:text="1.000.222"
            tools:textColor="@color/blue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContenBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin_10dp"
        android:background="@color/lightGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clContentProgress">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/stateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="@dimen/medium_margin_10dp"
            android:text="@string/card"
            android:theme="@style/Theme.CustomCard"
            android:textColor="@color/blue"
            android:contentDescription="@string/state_of_card"
            android:thumb="@drawable/toogle_buttom_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:switchPadding="@dimen/small_margin_4dp"
            app:track="@drawable/toogle_buttom_selector_drawable" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:id="@+id/clContentControl"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            android:importantForAccessibility="yes"
            android:accessibilityTraversalAfter="@id/stateCard"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_margin_10dp"
                android:src="@drawable/settings"
                android:padding="@dimen/icon_padding"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCardControl"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/control_card"
                android:textStyle="bold"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivSettings"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Card Control"
                tools:textColor="@color/lightBlue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/clContenBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clContenBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>